corrected html in label element

--- a/tipCalc.html
+++ b/tipCalc.html
@@ -30,13 +30,13 @@
                 <input type="number" class="form-control mr-3" id="guest">
                 <input type="submit" class="btn btn-dark" value="calculate">
             </form>
-            <label for="service">Quality of Service<
+            <label for="service">Quality of Service
                 <input type="radio" id="html" name="fav_language" value="HTML">1
                 <input type="radio" id="html" name="fav_language" value="HTML">2
                 <input type="radio" id="html" name="fav_language" value="HTML">3
                 <input type="radio" id="html" name="fav_language" value="HTML">4
                 <input type="radio" id="html" name="fav_language" value="HTML">5
-            </label>
+ a           </lbel>
             <h2 class="title">Tip Output</h2>
             <ul id="tip" class="list-group">
                 <li class="list-group-item">Test Element</li>
