changes per Feedback

--- a/tipCalc.html
+++ b/tipCalc.html
@@ -23,8 +23,8 @@
             <h2 class="title">Tip Calc Form</Form></h2>
             <form id="addForm" class="form-inline mb-3">
                     <input type="number" class="form-control mr-2" id="bill">
-                     <input type="number" class="form-control mr-3" id="guest">
-                <select class="form-control mr-2"><p>Service Quality</p>
+                    <input type="number" class="form-control mr-3" id="guest">
+                <select id = "quality" class="form-control mr-2"><p>Service Quality</p>
                     <option value="1">Poor</option>
                     <option value="2">Marginal</option>
                     <option value="3">Average</option>
@@ -35,8 +35,8 @@
                 <input type="submit" class="btn btn-dark" value="calculate">
             </form>
             <h2 class="title">Tip Output</h2>
-            <ul id="tip" class="list-group">
-                <li class="list-group-item">Test Element</li>
+            <ul class="list-group">
+                <li id ="tip" class="list-group-item">Test Element</li>
             </ul>
             <div id="output"></div>
             <br>
