added total tip list functionality

--- a/tipCalc.html
+++ b/tipCalc.html
@@ -34,10 +34,13 @@
                 </select>
                 <input type="submit" class="btn btn-dark" value="calculate">
             </form>
-            <h2 class="title">Tip Output</h2>
+            <h2 class="title">Tip Per Person Output</h2>
             <ul class="list-group">
-                <li id ="tip" class="list-group-item">Test Element</li>
+                <li id ="tip" class="list-group-item">Dummy element</li>
             </ul>
+            <h2 class="title">Total Tip Output</h2>
+            <ul class="list-group">
+                <li id ="tipTotal" class="list-group-item">Dummy element</li>
             <div id="output"></div>
             <br>
         </div>
