--- a/tipCalc.html
+++ b/tipCalc.html
@@ -22,9 +22,12 @@
         <div id="main" class="card card-body">
             <h2 class="title">Tip Calc Form</Form></h2>
             <form id="addForm" class="form-inline mb-3">
+                    <label for="bill">Total Bill</label>
                     <input type="number" class="form-control mr-2" id="bill">
+                    <labal for="guest">Number of Guests</labal>
                     <input type="number" class="form-control mr-3" id="guest">
-                <select id = "quality" class="form-control mr-2"><p>Service Quality</p>
+                <label for="quality">Quality of Service</label>
+                <select id="quality" class="form-control mr-2">
                     <option value="1">Poor</option>
                     <option value="2">Marginal</option>
                     <option value="3">Average</option>
