--- a/tipCalc.html
+++ b/tipCalc.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src = "listScript.js" async defer></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>To Do List</title>
     <link rel="stylesheet" href="style.css">
-    
+    <title>Tip Calculator</title>
 </head>
 <body>
 <header id="main-header" class="bg-success text-white p-4 mb-3">
