added 'Clear' at bottom

--- a/tipCalc.html
+++ b/tipCalc.html
@@ -47,6 +47,7 @@
                 <li id ="tipTotal" class="list-group-item">Dummy element</li>
             <div id="output"></div>
             <br>
+            <button id="clear" class="btn btn-dark">CLEAR FORM FIELDS</button>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
