--- a/tipCalc.html
+++ b/tipCalc.html
@@ -21,33 +21,41 @@
         </div>
     </div>
     </header>
-    <div class="container">
+    <div class="container" style="max-width: 520px;">
         <div id="main" class="card card-body">
             <h2 class="title">Tip Calc Form</Form></h2>
             <form id="addForm" class="form-inline mb-3">
+                <div class = row>
                     <label for="bill">Total Bill</label>
-                    <input type="number" class="form-control mr-2" id="bill" value="100">
-                    <labal for="guest">Number of Guests</labal>
-                    <input type="number" class="form-control mr-3" id="guest" value="2">
-                <label for="quality">Quality of Service</label>
-                <select id="quality" class="form-control mr-2">
-                    <option value="1">Poor</option>
-                    <option value="2">Marginal</option>
-                    <option value="3" selected>Average</option>
-                    <option value="4">Good</option>
-                    <option value="5">Excellent</option>
-                    <option value="6">Outstanding</option>
-                </select>
+                    <input type="number" class="form-control mr-2" id="bill" value="">
+                </div>
+
+                <div class = row>
+                    <label for="guest">Number of Guests</labal>
+                    <input type="number" class="form-control mr-3" id="guest" value="">
+                </div>
+
+                <div class = row>
+                    <label for="quality">Quality of Service</label>
+                    <select id="quality" class="form-control mr-2">
+                        <option value="1">Poor</option>
+                        <option value="2">Marginal</option>
+                        <option value="3" selected>Average</option>
+                        <option value="4">Good</option>
+                        <option value="5">Excellent</option>
+                        <option value="6">Outstanding</option>
+                    </select>
+                </div>
             </form>
             <button id="calculate" class="btn btn-dark">Calculate</button>
-            <h2 class="title">Tip Per Person</h2>
-            <ul class="list-group">
-                <li id ="tip" class="list-group-item"></li>
-            </ul>
             <h2 class="title">Total Tip</h2>
             <ul class="list-group">
                 <li id ="tipTotal" class="list-group-item"></li>
-            <div id="output"></div>
+            <div id="output">
+            <h2 class="title">Tip Per Person</h2>
+            <ul class="list-group">
+                <li id ="tip" class="list-group-item"></li>
+            </ul></div>
             <br>
             <button id="clear" class="btn btn-dark">Clear</button>
         </div>
